# snake-game

./: .gitignore  CMakeLists.txt  README.md
src/: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  FontManager.cpp  FontManager.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  GameOverState.cpp  GameOverState.hpp  GameState.hpp  Grid.cpp  Grid.hpp  MenuState.cpp  MenuState.hpp  PausedState.cpp  PausedState.hpp  PlayingState.cpp  PlayingState.hpp  Snake.cpp  Snake.hpp  Specs.cpp  Specs.hpp  SpriteManager.cpp  SpriteManager.hpp  main.cpp
tests/: CMakeLists.txt
tests/integration/: CollisionTests.cpp  SnakeEatingTests.cpp
tests/unit/: AudioManagerTests.cpp  FontManagerTests.cpp  FoodTests.cpp  SnakeTests.cpp  SpriteManagerTests.cpp
